3161
The second example is refused by the compiler in Scala 2.9.0.r24145-b20110130020134:

{code}
<console>:2: error: type mismatch;
 found   : java.lang.Object with Y with Z{type A = this.YA with this.ZA}
 required: java.lang.Object with Y with Z{type A = this.YA with this.ZA}
object RequestResult$$line5$$object {
                                  ^
{code}

It seems like this was fixed...
